v1.0.213 | 2024-09-30 | Fix jump to search results link display issues | Set tabindex to -1 when there are no search resutls

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -978,7 +978,7 @@ div.col-5 {
 /* Search */
 
 #results-link {
-  inline-size: 100%;
+  z-index: 100;
 }
 
 #searchField {
